# taskmanager2

./: .gitignore  20260110171020_add_users_table.sql  20260110171207_make_email_citext.sql  Makefile  README.md  alembic.ini  app.py  db.py  edit_task.py  login_routes.py  pyproject.toml  register_routes.py  tasks_routes.py
.claude/: settings.local.json
.github/workflows/: tests.yml
migrations/versions/: 15be3e786467_create_users_table.py  2af04ce18000_create_tasks_table.py  613de66df578_add_due_date_to_tasks.py
static/css/: main.css
templates/: base.html  dashboard.html  home.html  login.html  register.html
templates/tasks/: edit.html  index.html  new.html
tests/: conftest.py  test_db.py  test_tasks_routes.py  test_validation.py
